add dumpstatus for openapi
